--- a/practicumProject/build.gradle
+++ b/practicumProject/build.gradle
@@ -3,9 +3,7 @@ buildscript {
         mavenLocal()
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        jcenter()
-    }
-    dependencies {
+        maven { url "https://jcenter.bintray.com"  }
     }
 }
 
